# StreamMaster

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE
3rd/obs/libraries_x86/: obs.exp  obs.lib
deploy/as3_deploy/: base_app.swc  gui_base.swc  wg_lobby.swc
src/as3/: ButtonImageState.as  HeaderSprite.as  OverlayWindow.as  ServiceButton.as
src/backend/: CMakeLists.txt  apprun.cpp
src/backend/adapters/: scene.cpp  scene.h
src/backend/adapters/encoders/: audioencoder.cpp  audioencoder.h  encoder.cpp  encoder.h  videoencoder.cpp  videoencoder.h
src/backend/adapters/obs/: scene.cpp  scene.h
src/backend/adapters/outputs/: output.cpp  output.h
src/backend/adapters/services/: facebookservice.cpp  facebookservice.h  service.cpp  service.h  twitchservice.cpp  twitchservice.h  youtubeservice.cpp  youtubeservice.h
src/backend/adapters/sources/: audiocapturesource.cpp  audiocapturesource.h  source.cpp  source.h  videocapturesource.cpp  videocapturesource.h
src/backend/app/: smapp.cpp  smapp.h  smappliation.h  smapplication.cpp
src/backend/clients/: OBSClient.cpp  obsclient.h
src/backend/factories/: encoderfactory.cpp  encoderfactory.h  servicefactory.cpp  servicefactory.h  sourcefactory.cpp  sourcefactory.h  streamclientfactory.cpp  streamclientfactory.h
src/backend/utils/: constants.h  logger.h  shared.h  socket.cpp  socket.h
src/py/: mod_StreamMaster.py  mod_connectionmanager.py  mod_iconnection.py  mod_logger.py  mod_overlaywindow.py  mod_protocol.py  mod_streammasterconnection.py  mod_streammastersingleton.py  mod_streamservice.py
(+24 files in other folders)
